# data-science-path

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  __main__.py  cli.py  config.py  etl.py  exceptions.py  logger.py  run.py
notebooks/: 01-exploring-dataset.ipynb
src/: __init__.py  __main__.py  cli.py  config.py  etl.py  logger.py
