[tool.poetry]
name = "data-science-path"
version = "0.1.0"
description = "Lucas's data science path. A way to instruct me (Big João). Thanks!"
authors = ["João Guilherme Costa <joaoguilhermeall@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "latest"
kaggle = "^1.5.12"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
